# OrchidMantis

./: .gitignore  Cargo.toml  LICENSE  README.md  versions.txt
.github/workflows/: prove.yml  reproduce.yml
crates/zkpox-anchor/: Cargo.toml
crates/zkpox-anchor/assets/: rekor.pub.provenance.md
crates/zkpox-anchor/src/: lib.rs
crates/zkpox-backend-llvm-ir/: Cargo.toml
crates/zkpox-backend-llvm-ir/src/: lib.rs
crates/zkpox-backend-rv64im/: Cargo.toml
crates/zkpox-backend-rv64im/src/: lib.rs
crates/zkpox-backend-static-c/: Cargo.toml
crates/zkpox-backend-static-c/src/: lib.rs
crates/zkpox-envelope/: Cargo.toml
crates/zkpox-envelope/src/: lib.rs
crates/zkpox-guest/: Cargo.toml  build.rs
crates/zkpox-guest/src/: main.rs
crates/zkpox-predicates/: Cargo.toml
crates/zkpox-predicates/src/: lib.rs  outputs.rs  redzone.rs
crates/zkpox-prove/: Cargo.toml
crates/zkpox-prove/src/: build.rs  cli.rs  main.rs  orchestrate.rs  vendor.rs
crates/zkpox-schema/: Cargo.toml
crates/zkpox-schema/src/: bundle.rs  hash.rs  lib.rs  public_values.rs  registry.rs
crates/zkpox-verify/: Cargo.toml
crates/zkpox-verify/src/: main.rs
docs/: BUNDLE-FORMAT.md  DESIGN.md  DISCLOSURE-WORKFLOW.md  PREDICATES.md  REPRODUCING.md  ROADMAP.md  SCOPE.md  THREAT-MODEL.md
examples/: prove-libxml2-cve.sh  verify-bundle.sh
examples/04-libxml2-cve-2017-9047-upstream/: README.md  bundle.cbor
scripts/: verify-rekor-key.sh
scripts/reproduce/: Dockerfile  verify-vk.sh
targets/: 01-stack-bof.c  02-off-by-one.c  03-libxml2-cve-2017-9047.c  04-libxml2-cve-2017-9047-upstream.c  04-libxml2-cve-2017-9047-upstream.provenance.json  04-openssl-cve-2016-6303.c  README.md
tests/: run-realsource-repro.sh  run-tests.sh
tests/realsource/: harness.c
