[workspace]
resolver = "2"
members = [
    "crates/zkpox-schema",
    "crates/zkpox-predicates",
    "crates/zkpox-guest",
    "crates/zkpox-backend-static-c",
    "crates/zkpox-backend-rv64im",
    "crates/zkpox-backend-llvm-ir",
    "crates/zkpox-envelope",
    "crates/zkpox-anchor",
    "crates/zkpox-prove",
    "crates/zkpox-verify",
]
# Plain `cargo build` builds host-native binaries only. The `zkpox-guest`
# crate is exclusively cross-compiled to SP1's RISC-V triple via
# `cargo prove build`; its build.rs cross-links a C archive that the
# host linker rejects, so we keep it out of default-members.
default-members = [
    "crates/zkpox-schema",
    "crates/zkpox-predicates",
    "crates/zkpox-backend-static-c",
    "crates/zkpox-backend-rv64im",
    "crates/zkpox-backend-llvm-ir",
    "crates/zkpox-envelope",
    "crates/zkpox-anchor",
    "crates/zkpox-prove",
    "crates/zkpox-verify",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/quantumvillage/zkpox"
homepage   = "https://github.com/quantumvillage/zkpox"
rust-version = "1.85"

[workspace.dependencies]
# Core
anyhow      = "1.0"
thiserror   = "2.0"
serde       = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
ciborium    = "0.2"

# Hashing / encoding
sha2  = "0.10"
hex   = "0.4"
zeroize = "1.8"

# CLI / logging
clap  = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"

# Crypto / envelope
aes-gcm   = "0.10"
rand      = "0.8"
secrecy   = "0.10"
age       = "0.11"

# Networking (Rekor anchor)
ureq      = { version = "2.10", features = ["json"] }
base64    = "0.22"

# SP1 (host-side only; guest pulls sp1-zkvm via its own crate manifest)
sp1-sdk   = { version = "6.0.1", features = ["blocking", "native-gnark"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
