[package]
name = "zkpox-anchor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sigstore Rekor anchor client + inclusion-proof verifier."

[dependencies]
anyhow      = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_bytes = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
base64      = { workspace = true }
ureq        = { workspace = true }
zkpox-schema = { path = "../zkpox-schema" }
