[package]
name = "zkpox-anchor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sigstore Rekor anchor client + inclusion-proof verifier."

[dependencies]
anyhow      = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_bytes = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
base64      = { workspace = true }
ureq        = { workspace = true }
zkpox-schema = { path = "../zkpox-schema" }

# Rekor SET (Signed Entry Timestamp) verification. The public
# rekor.sigstore.dev log signs with ECDSA P-256; some self-hosted
# deployments use Ed25519. We parse the operator-supplied log pubkey
# PEM (SPKI) and dispatch on key type. Both crates are already in the
# lock via sp1-sdk, so this adds no new transitive surface.
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
p256          = { version = "0.13", features = ["ecdsa", "pem"] }
