[package]
name = "zkpox-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone zkpox verifier: STARK + target binding + envelope + anchor checks."

[[bin]]
name = "zkpox-verify"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
thiserror          = { workspace = true }
clap               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
ciborium           = { workspace = true }
sha2               = { workspace = true }
hex                = { workspace = true }

zkpox-schema             = { path = "../zkpox-schema" }
zkpox-envelope           = { path = "../zkpox-envelope" }
zkpox-anchor             = { path = "../zkpox-anchor" }
zkpox-backend-static-c   = { path = "../zkpox-backend-static-c" }
zkpox-predicates         = { path = "../zkpox-predicates" }

base64           = { workspace = true }
ed25519-dalek    = { version = "2" }
sp1-sdk          = { workspace = true }
# Lightweight on-chain-style groth16 verifier: embeds the SP1 version's
# ~300 KB verifying key, so a vendor verifies a wrapped proof without
# the guest ELF or the multi-GB proving artifacts. Pinned to the SP1
# release the rest of the stack resolves to (see versions.txt).
sp1-verifier     = "6.2.0"
